--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.1.0",
-        "ext-mysql": "*"
+        "ext-mysqli": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
